source/app_resources/DELETE-jupyter-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: proxy-public
  namespace: jupyter
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/success-codes: 200,301,302
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 8080}]'
  labels:
    app: jupyter
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: proxy-public
          servicePort: 8080
